--- a/connection.html
+++ b/connection.html
@@ -63,7 +63,7 @@
 
     <script>
         const clientId = 'bc84478e0d1d4102857e19116b8e5a16';  // Remplacez par votre Client ID
-        const redirectUri = 'http://127.0.0.1:5500/blindtest/callback.html';  // URI de redirection configurée
+        const redirectUri = 'http://gugus1010.github.io/n-oubliez-pas-les-cagoles/callback.html';  // URI de redirection configurée
         const scopes = 'playlist-read-private playlist-read-collaborative';  // Scopes nécessaires
 
         function loginWithSpotify() {
