--- a/callback.html
+++ b/callback.html
@@ -586,7 +586,7 @@
         });
         const leaderboardButton = document.getElementById('leaderboardButton');
         leaderboardButton.addEventListener('click', function() {
-            window.location.href = `http://gugus1010.github.io/n-oubliez-pas-les-cagoles/leaderboard.html`; // Remplacez 'leaderboard.html' par le chemin de votre page leaderboard
+            window.open( `http://gugus1010.github.io/n-oubliez-pas-les-cagoles/leaderboard.html`,'_blank'); // Remplacez 'leaderboard.html' par le chemin de votre page leaderboard
         });
 
     </script>
