--- a/callback.html
+++ b/callback.html
@@ -586,8 +586,9 @@
         });
         const leaderboardButton = document.getElementById('leaderboardButton');
         leaderboardButton.addEventListener('click', function() {
-            window.open( `http://gugus1010.github.io/n-oubliez-pas-les-cagoles/leaderboard.html`,'_blank'); // Remplacez 'leaderboard.html' par le chemin de votre page leaderboard
+            window.open(`http://gugus1010.github.io/n-oubliez-pas-les-cagoles/leaderboard.html`, '_blank');
         });
+
 
     </script>
 
