--- a/reponse.html
+++ b/reponse.html
@@ -71,7 +71,7 @@
             event.preventDefault();
             const artist = document.getElementById('artist').value.trim();
             const track = document.getElementById('track').value.trim();
-            const url = ''http://gugus1010.github.io/n-oubliez-pas-les-cagoles/serveur.js''; // Mettez ici l'URL de votre serveur local
+            const url = 'https://n-oubliez-pas-les-cagoles.vercel.app/serveur.js'; // Mettez ici l'URL de votre serveur local
 
             try {
                 const response = await fetch(url, {
