--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
             background-color: #169c4d;
         }
         .deezer {
-            background-color: #ef5466;
+            background-color: #e32636; /* Deezer rouge */
         }
         .deezer:hover {
-            background-color: #e23c50;
+            background-color: #c51d2e; /* Couleur plus foncée au survol */
         }
         button:active {
             animation: clickAnimation 0.5s ease-out;
