--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
             background-color: #169c4d;
         }
         .deezer {
-            background-color: #e32636; /* Deezer rouge */
+            background-color: #4a154b; /* Deezer violet */
         }
         .deezer:hover {
-            background-color: #c51d2e; /* Couleur plus foncée au survol */
+            background-color: #3b123b; /* Couleur plus foncée au survol */
         }
         button:active {
             animation: clickAnimation 0.5s ease-out;
@@ -82,7 +82,7 @@
         }
 
         // Deezer
-        const deezerAppId = 'YOUR_DEEZER_APP_ID';  // Remplacez par votre App ID Deezer
+        const deezerAppId = 'YOUR_DEEZER_APP_ID';  // Remplacez mais pas encore dispo
         const deezerRedirectUri = 'https://n-oubliez-pas-les-cagoles.vercel.app/callback.html';  // URI de redirection configurée pour Deezer
 
         function loginWithDeezer() {
