--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
             background-color: #169c4d;
         }
         .deezer {
-            background-color: #4a154b; /* Deezer violet */
+            background-color: ##8F3A84; /* Deezer violet */
         }
         .deezer:hover {
-            background-color: #3b123b; /* Couleur plus foncée au survol */
+            background-color: #702D68; /* Couleur plus foncée au survol */
         }
         button:active {
             animation: clickAnimation 0.5s ease-out;
