--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             background-color: #169c4d;
         }
         .deezer {
-            background-color: ##8F3A84; /* Deezer violet */
+            background-color: #8F3A84; /* Deezer violet */
         }
         .deezer:hover {
             background-color: #702D68; /* Couleur plus foncée au survol */
