--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion à Spotify et Deezer</title>
+    <title>Connexion à Spotify ou Deezer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Connexion à Spotify et Deezer</h1>
+        <h1>Connexion à Spotify ou Deezer</h1>
         <button class="spotify" onclick="loginWithSpotify()">Se connecter avec Spotify</button>
         <button class="deezer" onclick="loginWithDeezer()">Se connecter avec Deezer</button>
     </div>
