--- a/public/callback.html
+++ b/public/callback.html
@@ -5,7 +5,196 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N'oubliez pas les cagoles</title>
     <style>
-        /* Le style reste inchangé */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            padding: 20px;
+            color: #333;
+        }
+        .playlist {
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease;
+            overflow: hidden;
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+        .playlist:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .playlist img {
+            width: 100px;
+            height: 100px;
+            cursor: pointer;
+            border-radius: 8px;
+            margin-right: 15px;
+            transition: transform 0.3s ease;
+        }
+        .playlist img:hover {
+            transform: scale(1.05);
+        }
+        .playlist .details {
+            flex-grow: 1;
+        }
+        .playlist .details h2 {
+            margin-top: 0;
+            margin-bottom: 10px;
+            font-size: 20px;
+        }
+        .playlist .details .tracks {
+            display: none;
+            margin-top: 15px;
+        }
+        .playlist .details .tracks.active {
+            display: block;
+        }
+        .track {
+            margin: 5px 0;
+            padding: 10px;
+            background-color: #f7f7f7;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .track:hover {
+            background-color: #e0e0e0;
+        }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
+        #settings {
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: none;
+        }
+        #settings .form-group {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        #settings .form-group label {
+            margin: 0;
+            margin-right: 10px;
+        }
+
+        #settings input[type="number"] {
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            width: calc(100% - 16px);
+        }
+        #audioPlayer {
+            margin-top: 20px;
+            width: 100%;
+        }
+        #controls {
+            margin-bottom: 20px;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 999;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        #controls button {
+            margin-right: 0;
+            padding: 10px 20px;
+            background-color: #1db954;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.1s ease;
+        }
+        #controls button:hover {
+            background-color: #17a049;
+            transform: scale(1.05);
+        }
+        button {
+            background-color: #1db954;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.1s ease;
+        }
+        button:hover {
+            background-color: #17a049;
+            transform: scale(1.05);
+        }
+        #passedTracks {
+            display: none;
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 999;
+            width: calc(100% - 40px);
+            max-width: 400px;
+        }
+        #passedTracks h2 {
+            margin-top: 0;
+            margin-bottom: 15px;
+        }
+        #passedTracks ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        #passedTracks ul li {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f7f7f7;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        #passedTracks ul li:hover {
+            background-color: #e0e0e0;
+        }
+        #resetButton {
+            margin-top: 15px;
+            background-color: #f44336;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        #resetButton:hover {
+            background-color: #d32f2f;
+        }
+        #qrcodeContainer {
+            position: fixed;
+            top: 275px;
+            right: 20px;
+            text-align: center;
+            display: none;
+            z-index: 999;
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
